--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
+    "http-auth": "^3.2.3",
     "jquery": "^3.3.1",
     "mongoose": "^5.3.4",
     "popper.js": "^1.14.4",
