--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.3.4",
     "popper.js": "^1.14.4",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
