--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
@@ -28,6 +29,8 @@
     "mongoose": "^5.3.4",
     "popper.js": "^1.14.4",
     "pug": "^2.0.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
