--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/mskogen/APCS-BlizzardKicker#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "file:node_modules/body-parser",
     "bootstrap": "^4.1.3",
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "http-auth": "^3.2.3",
     "jquery": "^3.3.1",
