--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/mskogen/APCS-BlizzardKicker#readme",
   "dependencies": {
-    "body-parser": "file:node_modules/body-parser",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.1.0",
