--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/mskogen/APCS-BlizzardKicker#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "cheerio": "^1.0.0-rc.2",
@@ -35,6 +37,7 @@
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
-  }
+    "nodemon": "^1.18.7"
+  },
+  "keywords": []
 }
