--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.1.3",
     "cheerio": "^1.0.0-rc.2",
     "connect-mongo": "^2.0.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -33,6 +34,8 @@
     "mongoose": "^5.3.14",
     "popper.js": "^1.14.4",
     "pug": "^2.0.3",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "xmlhttprequest": "^1.8.0"
