--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/mskogen/APCS-BlizzardKicker#readme",
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "cheerio": "^1.0.0-rc.2",
@@ -41,6 +41,7 @@
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "zombie": "^6.1.4"
   }
 }
